--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "formio-example",
+  "name": "formio-react-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formio/react": "^5.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "formiojs": "^4.14.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
